# proj_assingment

./: .env  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/chatbot/: ipad_agent.py
backend/utils/: logger.py  query_classifier.py  response_generator.py  web_search.py
frontend/: app.py
tests/backend/: main.py
